# MAOS-FCS

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MAOS-FCS-ARTICLE-WRITING-GUIDE.md  PIPE  README.md  SECURITY.md  sil_events.jsonl  sil_events_webapi.jsonl
docs/: ARTICLE_KNOWLEDGE_MIGRATION_2026Q2.md  CLAUDE_HANDOFF_2026-04-14.md  INITIAL_REQUIREMENTS_V0.md  X-PLANE-TEST-MATRIX-PHASE-1B.md  XPLANE_SIL_QUICK_REFERENCE.ps1  XPLANE_SIL_STARTUP.md  XPLANE_SIL_STATUS.md  XPLANE_UDP_SETUP.md  XPLANE_UDP_VS_WEBAPI.md  github_projects_and_phase0_backlog.md  hardware_v0_1.md  requirements.md  sil_fidelity_roadmap.md  sil_first_xplane_session_kit.md  sil_phase0_automation_blueprint.md  sil_phase0_execution_plan.md  sil_phase1_test_matrix.md  sil_runner_usage.md  weekly_rollup_automation.md  weekly_rollup_report.md  weekly_rollup_report_template.md
firmware/fcc/: CMakeLists.txt  README.md
firmware/fcc/include/: actuator_protocol.h  fcc_scheduler.h
firmware/fcc/src/: actuator_protocol.c  fcc_scheduler.c  main.c  test_actuator_protocol.c
sim/: actuator_codec.py  actuator_profiles.py  actuator_runtime.py  aircraft_config.py  avionics_ingress.py  control_arch.py  control_law_engine.py  event_log.py  fcs_runtime.py  gust_alleviation_provider.py  lane_codec.py  test_actuator_codec.py  test_actuator_conformance_vectors.py  test_actuator_fault_interpretation.py  test_actuator_profiles.py  test_actuator_runtime.py  test_aircraft_config.py  test_avionics_ingress.py  test_control_arch.py  test_control_law_engine.py  test_event_log.py  test_fcs_runtime.py  (+8 more)
(+71 files in other folders)
